[BUGFIX] Fix alignment of CKEditor in TopBar

--- a/Resources/Private/Sass/Elements/_other.scss
+++ b/Resources/Private/Sass/Elements/_other.scss
@@ -152,7 +152,7 @@ body {
     z-index: 10998;
     margin: 0 auto;
     width: auto;
-    left: 280px;
+    left: 0;
     right: 325px;
 
     > .cke {
